--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -1,29 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    style="@style/RecipeItem"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/recipe_image"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_launcher_background"
-        android:contentDescription="@string/recipe_image_accessibility" />
-
-    <TextView
-        android:id="@+id/recipe_name"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="@dimen/medium_margin"
-        android:layout_marginStart="@dimen/medium_margin"
-        android:layout_centerHorizontal="true"
-        tools:text="This is a recipe"/>
+        android:paddingTop="@dimen/large_margin"
+        android:paddingBottom="@dimen/large_margin">
 
-</RelativeLayout>
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/recipe_image"
+            android:layout_height="0dp"
+            android:layout_width="@dimen/recipe_image_size"
+            android:layout_marginStart="@dimen/medium_margin"
+            android:contentDescription="@string/recipe_image_accessibility"
+            app:layout_constraintBottom_toBottomOf="@+id/servings"
+            app:layout_constraintDimensionRatio="h,1:1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/recipe_name"
+            app:srcCompat="@drawable/ic_recipe_placeholder" />
+
+        <TextView
+            android:id="@+id/recipe_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/medium_margin"
+            android:layout_marginEnd="@dimen/medium_margin"
+            android:textSize="@dimen/large_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/recipe_image"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Brownies" />
+
+        <TextView
+            android:id="@+id/servings_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/serves"
+            android:textSize="@dimen/medium_text"
+            app:layout_constraintEnd_toEndOf="@+id/recipe_name"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/recipe_name"
+            app:layout_constraintTop_toBottomOf="@+id/recipe_name" />
+
+        <TextView
+            android:id="@+id/servings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/medium_text"
+            android:layout_marginStart="@dimen/small_margin"
+            app:layout_constraintStart_toEndOf="@+id/servings_header"
+            app:layout_constraintTop_toBottomOf="@+id/recipe_name"
+            tools:text="8" />
+    </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
