--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="medium_margin">16dp</dimen>
+    <dimen name="small_margin">8dp</dimen>
+    <dimen name="large_margin">24dp</dimen>
+    <dimen name="large_text">24sp</dimen>
+    <dimen name="medium_text">16sp</dimen>
+    <dimen name="recipe_image_size">56dp</dimen>
 </resources>
