--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -58,6 +58,7 @@
             tools:text="8" />
 
         <ImageView
+            android:id="@+id/recipe_open_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/medium_margin"
@@ -67,6 +68,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/servings_header"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/recipe_name"
-            app:layout_constraintTop_toTopOf="@+id/recipe_name" />
+            app:layout_constraintTop_toTopOf="@+id/recipe_name"
+            android:contentDescription="@string/open_recipe_accessibility" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
