--- a/app/src/main/res/layout/recipe_step_detail.xml
+++ b/app/src/main/res/layout/recipe_step_detail.xml
@@ -8,40 +8,60 @@
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/step_video"
         android:layout_width="match_parent"
-        android:layout_height="72dp"
+        android:layout_height="@dimen/step_video_height"
+        android:visibility="gone"
         android:layout_marginTop="@dimen/small_margin"
         android:layout_marginEnd="@dimen/medium_margin"
-        android:layout_marginStart="@dimen/medium_margin">
-
-    </com.google.android.exoplayer2.ui.PlayerView>
-
-    <TextView
-        android:id="@+id/step_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/medium_margin"
-        android:layout_gravity="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        tools:text="Prep the cookie crust." />
-
-    <TextView
-        android:id="@+id/next_step_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/large_margin"
-        android:layout_marginBottom="@dimen/small_margin"
-        android:layout_gravity="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:visibility="gone"
-        android:text="@string/next_step" />
+        android:layout_marginStart="@dimen/medium_margin"/>
 
     <ImageView
-        android:id="@+id/recipe_open_arrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="0dp"
-        android:src="@drawable/ic_chevron_right"
+        android:id="@+id/step_thumbnail"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="@dimen/medium_margin"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/ic_launcher"
         android:visibility="gone"
-        android:contentDescription="@string/button_next_step_accessibility" />
+        android:contentDescription="@string/recipe_thumbnail_image_accessibility" />
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/step_details_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/medium_margin">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/step_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/medium_margin"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                tools:text="Prep the cookie crust." />
+
+            <TextView
+                android:id="@+id/next_step_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/large_margin"
+                android:layout_marginBottom="@dimen/small_margin"
+                android:layout_gravity="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:text="@string/next_step" />
+
+            <ImageView
+                android:id="@+id/recipe_open_arrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="0dp"
+                android:src="@drawable/ic_chevron_right"
+                android:contentDescription="@string/button_next_step_accessibility" />
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
