--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="small_padding">8dp</dimen>
     <dimen name="card_radius">4dp</dimen>
     <dimen name="medium_padding">16dp</dimen>
+    <dimen name="step_video_height">300dp</dimen>
 </resources>
