--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="card_radius">4dp</dimen>
     <dimen name="medium_padding">16dp</dimen>
     <dimen name="step_video_height">300dp</dimen>
+    <dimen name="appwidget_dimen">112dp</dimen>
 </resources>
