--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,6 @@
     <dimen name="medium_padding">16dp</dimen>
     <dimen name="step_video_height">300dp</dimen>
     <dimen name="appwidget_dimen">112dp</dimen>
+    <dimen name="divider_height">1dp</dimen>
+    <dimen name="widget_minresize_height">72dp</dimen>
 </resources>
