--- a/app/src/main/res/layout-sw600dp/recipe_step_activity.xml
+++ b/app/src/main/res/layout-sw600dp/recipe_step_activity.xml
@@ -6,14 +6,16 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recipe_step_list"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="2"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/medium_margin"
         android:layout_marginEnd="@dimen/medium_margin" />
 
     <FrameLayout
         android:id="@+id/recipe_step_detail_container"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="3"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/medium_margin"/>
 
